--- a/examples/native-sdk-ios-client/NativeWeb3App/Base.lproj/Main.storyboard
+++ b/examples/native-sdk-ios-client/NativeWeb3App/Base.lproj/Main.storyboard
@@ -197,7 +197,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PlN-Ph-shZ">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PlN-Ph-shZ">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <color key="textColor" systemColor="labelColor"/>
