--- a/packages/wallet-sdk/src/components/ConnectDialog/ConnectDialog.scss
+++ b/packages/wallet-sdk/src/components/ConnectDialog/ConnectDialog.scss
@@ -1,6 +1,6 @@
 @import "./theme.scss";
 
-.connect-dialog {
+.sdk-connect-dialog {
   width: 700px;
   // height: 430px;
   margin: auto;
@@ -17,17 +17,6 @@
       background: $black;
     }
   }
-
-
-  // z-index: 2147483647;
-  // position: fixed;
-  // top: 0;
-  // left: 0;
-  // right: 0;
-  // bottom: 0;
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
 
   &-header {
     display: flex;
@@ -57,5 +46,51 @@
   &-column-right {
     flex: 25%;
     margin-right: 34px;
+  }
+}
+
+.sdk-cancel-button {
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+
+  &-x {
+    position: relative;
+    display: block;
+    cursor: pointer;
+
+    &.light {
+      fill: $black;
+    }
+
+    &.dark {
+      fill: $white;
+    }
+  }
+}
+
+.sdk-wallet-steps {
+  padding: 0 0 0 20px;
+  margin: 0;
+  width: 100%;
+
+  &-item {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 12px;
+  }
+
+  &-item-container {
+    display: flex;
+    align-items: center;
+  }
+
+  &-pad-left {
+    margin-left: 6px;
   }
 }
