--- a/packages/wallet-sdk/src/components/TryExtensionContent/TryExtensionContent.scss
+++ b/packages/wallet-sdk/src/components/TryExtensionContent/TryExtensionContent.scss
@@ -6,8 +6,9 @@
 .-cbwsdk-css-reset {
   .-cbwsdk-try-extension {
     display: flex;
-    border-radius: 12px;
     margin-top: 12px;
+    width: 700px;
+    border-radius: 12px;
     padding: 30px;
   
     &.light {
