--- a/packages/wallet-sdk/src/components/TryExtensionContent/TryExtensionContent.scss
+++ b/packages/wallet-sdk/src/components/TryExtensionContent/TryExtensionContent.scss
@@ -10,24 +10,28 @@
     width: 700px;
     border-radius: 12px;
     padding: 30px;
-  
+
     &.light {
       background: $white;
     }
-  
+
     &.dark {
       background: $black;
     }
-  
+
     &-column-half {
       flex: 50%;
     }
-  
+
     &-heading {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 25px;
+      line-height: 32px;
       margin: 0;
-      max-width: 172px;
+      max-width: 204px;
     }
-  
+
     &-cta {
       appearance: none;
       border: none;
@@ -41,44 +45,52 @@
       font-size: 16px;
       line-height: 24px;
     }
-  
-    &-cta-container {
+
+    &-cta-wrapper {
       display: flex;
       align-items: center;
       margin-top: 12px;
     }
-  
+
     &-cta-icon {
       display: block;
       margin-left: 4px;
       height: 14px;
     }
-  
+
     &-list {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
       margin: 0;
       padding: 0;
       list-style: none;
+      height: 100%;
     }
-  
+
     &-list-item {
       display: flex;
       align-items: center;
-      margin-top: 12px;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 20px;
-      color: $foreground-muted;
-  
+      flex-flow: nowrap;
+      margin-top: 24px;
+
       &:first-of-type {
         margin-top: 0;
       }
     }
-  
+
     &-list-item-icon {
-      margin-right: 12px;
+      display: block;
+    }
+
+    &-list-item-copy {
+      display: block;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: $foreground-muted;
+      padding-left: 12px;
     }
   }
 }
