--- a/packages/wallet-sdk/src/components/ConnectDialog/ConnectDialog.scss
+++ b/packages/wallet-sdk/src/components/ConnectDialog/ConnectDialog.scss
@@ -4,7 +4,7 @@
 @import "../theme.scss";
 
 .-cbwsdk-css-reset {
-  .-cbwsdk-extension-dialog {
+  .-cbwsdk-connect-dialog {
     z-index: 2147483647;
     position: fixed;
     top: 0;
