--- a/packages/wallet-sdk/src/components/theme.scss
+++ b/packages/wallet-sdk/src/components/theme.scss
@@ -2,6 +2,7 @@ $primary: #0052FF;
 $blue-normal: #1652f0;
 $blue-dark: rgb(55, 115, 245);
 $blue-wash: #F5F8FF;
+$gray-90: #1e2025;
 
 $foreground-muted: #5B636E;
 
