--- a/packages/wallet-sdk/src/components/ConnectContent/ConnectContent.scss
+++ b/packages/wallet-sdk/src/components/ConnectContent/ConnectContent.scss
@@ -5,6 +5,7 @@
 
 .-cbwsdk-css-reset {
   .-cbwsdk-connect-content {
+    height: 430px;
     width: 700px;
     border-radius: 12px;
     padding: 30px;
@@ -30,6 +31,13 @@
       font-size: 28px;
       line-height: 36px;
       margin: 0;
+      &.light {
+        color: $black;
+      }
+      
+      &.dark {
+        color: $white;
+      }
     }
 
     &-layout {
@@ -46,6 +54,15 @@
       margin-right: 34px;
     }
 
+    &-qr-wrapper {
+      width: 216px;
+      height: 216px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: $white;
+    }
+
     &-qr-connecting {
       position: absolute;
       top: 0;
@@ -59,24 +76,21 @@
 
       &.light {
         background-color: rgba($white, 0.95);
-
-        >p {
+        > p {
           color: $black;
         }
       }
 
       &.dark {
         background-color: rgba($background-alt-dark, 0.9);
-
-        >p {
+        > p {
           color: $white;
         }
       }
 
-      >p {
+      > p {
         font-size: 12px;
         font-weight: bold;
-
         margin-top: 16px;
       }
     }
@@ -94,14 +108,6 @@
       position: relative;
       display: block;
       cursor: pointer;
-
-      &.light {
-        fill: $black;
-      }
-
-      &.dark {
-        fill: $white;
-      }
     }
   }
 
@@ -119,6 +125,14 @@
       font-size: 16px;
       line-height: 24px;
       margin-top: 12px;
+      
+      &.light {
+        color: $black;
+      }
+      
+      &.dark {
+        color: $white;
+      }
     }
 
     &-item-wrapper {
@@ -141,14 +155,19 @@
 
     &.light {
       color: $black;
+      &.selected {
+        background: $blue-wash;
+      }
     }
 
     &.dark {
       color: $white;
+      &.selected{
+        background: $gray-90;
+      }
     }
 
     &.selected {
-      background: $blue-wash;
       border-radius: 100px;
       color: $blue-dark;
       font-weight: 600;
