--- a/packages/wallet-sdk/src/components/theme.scss
+++ b/packages/wallet-sdk/src/components/theme.scss
@@ -1,10 +1,10 @@
-$primary: #0052FF;
+$primary: #0052ff;
 $blue-normal: #1652f0;
 $blue-dark: rgb(55, 115, 245);
-$blue-wash: #F5F8FF;
+$blue-wash: #f5f8ff;
 $gray-90: #1e2025;
 
-$foreground-muted: #5B636E;
+$foreground-muted: #5b636e;
 
 $wash: #fafbfc;
 $white: #fff;
