--- a/packages/wallet-sdk/src/lib/cssReset.scss
+++ b/packages/wallet-sdk/src/lib/cssReset.scss
@@ -7,7 +7,9 @@
   &,
   * {
     animation: none;
+    animation-delay: 0;
     animation-direction: normal;
+    animation-duration: 0;
     animation-fill-mode: none;
     animation-iteration-count: 1;
     animation-name: none;
@@ -57,6 +59,7 @@
     box-sizing: border-box;
     caption-side: top;
     clear: none;
+    clip: auto;
     color: inherit;
     columns: auto;
     column-count: auto;
@@ -76,7 +79,6 @@
     font: normal;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue",
       Arial, sans-serif;
-    word-spacing: normal;
     font-size: medium;
     font-style: normal;
     font-variant: normal;
@@ -95,7 +97,9 @@
     margin-right: 0;
     margin-top: 0;
     opacity: 1;
+    orphans: 0;
     outline: 0;
+    outline-color: invert;
     outline-style: none;
     outline-width: medium;
     overflow: visible;
@@ -133,8 +137,10 @@
     transition-property: none;
     transition-timing-function: ease;
     unicode-bidi: normal;
+    vertical-align: baseline;
     visibility: visible;
     white-space: normal;
+    widows: 0;
     word-spacing: normal;
     z-index: auto;
   }
