--- a/packages/wallet-sdk/src/components/theme.scss
+++ b/packages/wallet-sdk/src/components/theme.scss
@@ -5,11 +5,12 @@ $primary-wash: #f5f8ff;
 $primary-wash-dark: #001033;
 
 $foreground-muted: #5b636e;
+$foreground-muted-dark: #8A919E;
 
 $white: #FFF;
-$black: #000;
-
-$grey-50: #aaa;
+$black: #0A0B0D;
 
 $background: $white;
-$background-dark: #0A0B0D;
+$background-alt: #EEF0F3;
+$background-dark: $black;
+$background-alt-dark: #1E2025;
