--- a/packages/wallet-sdk/src/components/theme.scss
+++ b/packages/wallet-sdk/src/components/theme.scss
@@ -1,16 +1,16 @@
-$primary: #0052FF;
-$primary-dark: #588AF5;
+$primary: #0052ff;
+$primary-dark: #588af5;
 
 $primary-wash: #f5f8ff;
 $primary-wash-dark: #001033;
 
 $foreground-muted: #5b636e;
-$foreground-muted-dark: #8A919E;
+$foreground-muted-dark: #8a919e;
 
-$white: #FFF;
-$black: #0A0B0D;
+$white: #fff;
+$black: #0a0b0d;
 
 $background: $white;
-$background-alt: #EEF0F3;
+$background-alt: #eef0f3;
 $background-dark: $black;
-$background-alt-dark: #1E2025;
+$background-alt-dark: #1e2025;
