--- a/packages/wallet-sdk/src/components/RedirectDialog/RedirectDialog.scss
+++ b/packages/wallet-sdk/src/components/RedirectDialog/RedirectDialog.scss
@@ -48,6 +48,15 @@
         font-size: 16px;
         line-height: 24px;
       }
+
+      &-dark {
+        background-color: $black;
+        color: $white;
+
+        button {
+          color: $primary;
+        }
+      }
     }
   }
 }
