--- a/packages/wallet-sdk/src/components/RedirectDialog/RedirectDialog.scss
+++ b/packages/wallet-sdk/src/components/RedirectDialog/RedirectDialog.scss
@@ -49,9 +49,18 @@
         line-height: 24px;
       }
 
-      &-dark {
+      &.dark {
         background-color: $black;
         color: $white;
+
+        button {
+          color: $primary;
+        }
+      }
+
+      &.light {
+        background-color: $white;
+        color: $black;
 
         button {
           color: $primary;
